# WARN-Scraper_MA

./: Cargo.toml  README.md
proto_generator/: Cargo.toml  build.rs
proto_generator/src/: lib.rs  notice_collector.rs
protobufs/: notices.proto
scraper_cli/: Cargo.toml
scraper_cli/src/: cli.rs  main.rs
web_scraper/: Cargo.toml
web_scraper/src/: download_manager.rs  error.rs  lib.rs  notice_collector.rs  notice_paragraph_parser.rs  scraper.rs  scraper_adapter.rs  year_to_date_xslx_parser.rs
