[package]
name = "scraper_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web_scraper = { path = "../web_scraper" }
protobuf-json-mapping = "3.2.0"
thiserror = "1.0.48"
clap = { version = "4.4.2", features = ["derive"] }
proto_generator = { path = "../proto_generator" }